Labs/06-AKS-Flask-App/manifests/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: simplemetrics
  labels:
    app: simplemetrics
spec:
  type: ClusterIP
  selector:
    app: simplemetrics
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
